--- a/gold/index.html
+++ b/gold/index.html
@@ -222,7 +222,7 @@
                     <a href="#" class="button-mobile w-button" style="background-color: #ffffff00;">
                         <w3m-core-button></w3m-core-button>
                     </a>
-                    <h1 class="intro-heading"><span class="gradient-color-span">Golden Matic Dashboard</span></h1>
+                    <h1 class="intro-heading"><span class="gradient-color-span">future Matic Dashboard</span></h1>
                     <h1 class="intro-heading"> Join Now:
                         <span <div id="countdown" class="countdown"></div>
   </span>
@@ -638,12 +638,12 @@
                                     <div class="ref-level-value" id='lvl2'>0 MATIC</div>
                                 </div>
                                 <div class="ref-level">
-                                    <div class="ref-level-text">Level 3 <span class="level-percent">2%</span>
+                                    <div class="ref-level-text">Level 3 <span class="level-percent">3%</span>
                                     </div>
                                     <div class="ref-level-value" id='lvl3'>0 MATIC</div>
                                 </div>
                                 <div class="ref-level">
-                                    <div class="ref-level-text">Level 4 <span class="level-percent">1%</span>
+                                    <div class="ref-level-text">Level 4 <span class="level-percent">2%</span>
                                     </div>
                                     <div class="ref-level-value" id='lvl4'>0 MATIC</div>
                                 </div>
