--- a/gold/index.html
+++ b/gold/index.html
@@ -162,6 +162,13 @@
 </head>
 
 <body class="body">
+    <div class="hero_area">
+
+    <div class="hero_bg_box">
+      <div class="bg_img_box">
+        <img src="Pic/hero-bg.png" alt="">
+      </div>
+    </div>
     <div class="toast-box">
         <div class="toast-box-icon"> <i class='bx bx-check'></i>
         </div>
@@ -193,10 +200,11 @@
                 <div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div>
             </div>
             <section>
-                <div class="w-layout-blockcontainer intro-wrapper w-container">
+                <!--<div class="w-layout-blockcontainer intro-wrapper w-container">
                     <a href="#" class="button-mobile w-button" style="background-color: #ffffff00;">
                         <w3m-core-button></w3m-core-button>
-                    </a>
+                    </a>--!>
+                
                     <h1 class="intro-heading"><span class="gradient-color-span">future Matic Dashboard</span></h1>
                     <h1 class="intro-heading"> Join Now:
                         <span <div id="countdown" class="countdown"></div>
