--- a/gold/index.html
+++ b/gold/index.html
@@ -5,7 +5,7 @@
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-M0D9MG54D8"></script>
-    <script>
+    <!--<script>
         window.dataLayer = window.dataLayer || [];
 
         function gtag() {
@@ -16,8 +16,7 @@
         gtag('config', 'G-M0D9MG54D8');
 
 
-        <
-        style >
+        <style >
             @keyframes shine {
                 0 % {
                     background - position: -200 % ;
@@ -45,7 +44,7 @@
         }
     </style>
     </script>
-    <style>
+    <style>--!>
         .wf-force-outline-none[tabindex="-1"]:focus {
             outline: none;
         }
@@ -190,9 +189,9 @@
 (min-width: 991px) 13vw,
 (min-width: 1920px) 130px" alt="" class="image"></a>
                     <div class="nav-button-wr">
-                        <a href="#" class="nav-button-start w-button" style="background-color: #ffffff00;">
+                        <!--<a href="#" class="nav-button-start w-button" style="background-color: #ffffff00;">
                             <w3m-core-button></w3m-core-button>
-                        </a>
+                        </a>--!>
                     </div>
                     <div class="menu-button w-nav-button" style="-webkit-user-select: text;" aria-label="menu" role="button" tabindex="0" aria-controls="w-nav-overlay-0" aria-haspopup="menu" aria-expanded="false">
                     </div>
@@ -200,8 +199,7 @@
                 <div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div>
             </div>
             <section>
-                <!--<div class="w-layout-blockcontainer intro-wrapper w-container">
-                    <a href="#" class="button-mobile w-button" style="background-color: #ffffff00;">
+                <!--<div class="w-layout-blockcontainer intro-wrapper w-container"><a href="#" class="button-mobile w-button" style="background-color: #ffffff00;">
                         <w3m-core-button></w3m-core-button>
                     </a>--!>
                 
