--- a/gold/index.html
+++ b/gold/index.html
@@ -3,9 +3,14 @@
 
 
 <head>
+    <style>
+body {
+  background-image: url('Pic/hero-bg.png');
+}
+</style>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-M0D9MG54D8"></script>
-    <!--<script>
+    <script>
         window.dataLayer = window.dataLayer || [];
 
         function gtag() {
@@ -44,7 +49,7 @@
         }
     </style>
     </script>
-    <style>--!>
+    <style>
         .wf-force-outline-none[tabindex="-1"]:focus {
             outline: none;
         }
@@ -161,13 +166,7 @@
 </head>
 
 <body class="body">
-    <div class="hero_area">
-
-    <div class="hero_bg_box">
-      <div class="bg_img_box">
-        <img src="Pic/hero-bg.png" alt="">
-      </div>
-    </div>
+    
     <div class="toast-box">
         <div class="toast-box-icon"> <i class='bx bx-check'></i>
         </div>
