--- a/gold/index.html
+++ b/gold/index.html
@@ -161,22 +161,8 @@ body {
 (min-width: 768px) 130px,
 (min-width: 991px) 13vw,
 (min-width: 1920px) 130px" alt="" class="image"></a>
-                    <div class="nav-button-wr">
-                        <!--<a href="#" class="nav-button-start w-button" style="background-color: #ffffff00;">
-                            <w3m-core-button></w3m-core-button>
-                        </a>--!>
-                    </div>
-                    <div class="menu-button w-nav-button" style="-webkit-user-select: text;" aria-label="menu" role="button" tabindex="0" aria-controls="w-nav-overlay-0" aria-haspopup="menu" aria-expanded="false">
-                    </div>
-                </div>
-                <div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div>
-            </div>
-            <section>
-                <!--<div class="w-layout-blockcontainer intro-wrapper w-container"><a href="#" class="button-mobile w-button" style="background-color: #ffffff00;">
-                        <w3m-core-button></w3m-core-button>
-                    </a>--!>
-                
-                    <h1 class="intro-heading"><span class="gradient-color-span">future Matic Dashboard</span></h1>
+                    
+                <h1 class="intro-heading"><span class="gradient-color-span">Matic Future Dashboard</span></h1>
                     <h1 class="intro-heading"> Join Now:
                         <span <div id="countdown" class="countdown"></div>
   </span>
